--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "nextsapien-component-lib": "^1.0.30",
     "ngx-bootstrap": "^12.0.0",
     "rxjs": "~7.8.0",
-    "swiper": "^11.0.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -50,6 +49,45 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~5.2.0"
+    "typescript": "~5.2.0",
+    "@babel/cli": "^7.23.0",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.22.15",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@types/react": "^18.2.31",
+    "@vitejs/plugin-vue": "^4.4.0",
+    "autoprefixer": "^10.4.16",
+    "chalk": "^5.3.0",
+    "clean-css": "^5.3.2",
+    "concurrently": "^8.2.2",
+    "conventional-changelog-cli": "^2.2.2",
+    "cross-env": "^7.0.3",
+    "elapsed-time-logger": "^1.1.7",
+    "eslint": "^8.52.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "exec-sh": "^0.4.0",
+    "fs-extra": "^11.1.1",
+    "globby": "^13.2.2",
+    "inquirer": "^9.2.11",
+    "less": "^4.2.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.31",
+    "prettier": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.5",
+    "rollup": "^4.1.4",
+    "ssr-window": "^4.0.2",
+    "terser": "^5.22.0",
+    "vite": "^4.5.0",
+    "vue": "^3.3.6"
   }
 }
